--- a/package.json
+++ b/package.json
@@ -4,12 +4,8 @@
     "description": "A memory management plugin for SillyTavern that injects the minimum amount of info into your prompts.",
     "private": true,
     "packageManager": "pnpm@9.12.3",
-    "workspaces": ["packages/*","apps/*"],
+    "workspaces": [],
     "scripts": {
-        "build": "pnpm -r --filter './apps/*' run build",
-        "dev": "pnpm -r --filter './apps/*' run dev",
-        "lint": "eslint .",
-        "format": "prettier -w ."
     },
     "repository": {
         "type": "git",
@@ -20,11 +16,7 @@
     "bugs": {
         "url": "https://github.com/kattailmeow/SillyTavern-MemoryKit/issues"
     },
-    "homepage": "https://github.com/kattailmeow/SillyTavern-MemoryKit#readme",
+    "homepage": "https://github.com/kattailmeow/SillyTavern-MemoryKit",
     "devDependencies": {
-        "eslint": "^9.13.0",
-        "typescript": "^5.6.3",
-        "typescript-eslint": "^8.8.1",
-        "prettier": "^3.3.3"
     }
 }
