--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,13 @@
 {
   "name": "sillytavern-memorykit",
   "display_name": "Memory Kit by Kat",
-  "description": "A memory management plugin for SillyTavern",
+  "description": "A token-efficient memory extraction and retrieval plugin for SillyTavern",
   "loading_order": 1,
   "requires": [],
   "optional": [],
   "dependencies": [],
-  "js": "index.js",
-  "css": "style.css",
+  "js": "dist/index.js",
+  "css": "dist/style.css",
   "author": "kattailmeow",
   "version": "1.0.0",
   "homePage": "https://github.com/kattailmeow/SillyTavern-MemoryKit",
@@ -15,6 +15,5 @@
   "minimum_client_version": "1.0.0",
   "i18n": {
     "zh-cn": "i18n/zh-cn.json"
-  },
-  "buildTime": "2025-10-25T09:23:12.925Z"
+  }
 }
